--- a/pong.css
+++ b/pong.css
@@ -13,6 +13,7 @@ div#settingsContainer {
 }
 
 div.inline-container {
+    display: inline-block;
     font-size: x-large;
-    margin-top: 1em;
+    margin: 0.5em;
 }
