--- a/general.css
+++ b/general.css
@@ -21,8 +21,8 @@ body {
 }
 
 .container {
-    margin-left: 2em;
-    margin-right: 2em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 div#footerContainer h3 {
@@ -42,3 +42,16 @@ div#footerContainer h3 {
         display: none !important;
     }
 }
+
+/* START LEFT TOOLBAR */
+div#leftToolbar {
+    position: fixed;
+    left: 0px;
+}
+
+div#leftToolbar>button.clickable {
+    margin-left: 0px;
+    margin-bottom: 1.5em;
+    border-left-width: 0px;
+}
+/* END LEFT TOOLBAR */
