--- a/hangman.css
+++ b/hangman.css
@@ -59,7 +59,7 @@ div#wordlistCheckContainer {
 
 
 
-div#wordlistCheckContainer input, p {
+div#wordlistCheckContainer input, p#winningWordResponse, p#checkResult {
     font-size: large;
 }
 
